<resources>
    <string name="app_name">The Last Group</string>
    <string name="post">Post</string>
    <string name="send">Send</string>
    <string name="username">jakoba</string>
    <string name="message">Some short sample text.</string>
    <string name="album">Album</string>
    <string name="takePicture">Take image of vehicle</string>
    <string name="selectPicture">Select image of vehicle</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="preview">Image</string>
    <string name="chattImage">chattImage</string>
    <string name="videoView">videoView</string>

</resources>